--- a/src/App.css
+++ b/src/App.css
@@ -28,11 +28,73 @@
   color: #61dafb;
 }
 
+#title {
+  margin-top: 5%;
+}
+
+#icon {
+  width: 100px;
+}
+#playStop {
+  display: inline-flex;
+  width: 100%;
+  padding-bottom: 5%;
+  padding-top: 5%;
+  background-color: #282c34;
+}
+
+#play {
+  width: 25%;
+  float: left;
+  margin-left: 35%;
+}
+
+#stop {
+  width: 25%;
+  float: right;
+  margin-right: 35%;
+}
+
+#allButtons {
+  width: 100%;
+}
+#audio-button {
+  margin-bottom: 20px;
+  width: 15%;
+  height: 10%;
+  font-size: 30px;
+}
+
+#audio-button:hover {
+  background-color: rgb(236, 225, 168);
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  #icon {
+    width: 70px;
+  }
+  #play {
+    margin-left: 20%;
+    width: 45%;
+  }
+
+  #stop {
+    margin-right: 20%;
+    width: 45%;
+  }
+  #audio-button {
+    margin-bottom: 20px;
+    width: 50%;
+    height: 10%;
+    font-size: 20px;
   }
 }
